Remove _site as GH hosting doesn't need it, tweak links and add gitignore

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -99,8 +99,7 @@ a {
     }
 
     &:hover {
-        color: $text-color;
-        text-decoration: underline;
+        color: darken($brand-color, 30%);
     }
 }
 
